--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -138,7 +138,6 @@ cards:
       is the sum of the four nations' figures and can only be calculated when all nations' data
       are available.
 
-
     options:
       type: radio
       heading: null
@@ -478,51 +477,105 @@ cards:
       are collected differently across nations.  Data are not updated at weekends and data are not all provided from each nation 
       every day.
     # {{ EndDevOnlyBlock }}
-     
-    download:
-      - hospitalCases
 
-    tabs:
-      - heading: Daily
-        tabType: chart
-        barType: stack
-        colours: [0, 9, 3, 10] # areaNames in alphabetical order
-        params:
-          - key: areaType
-            sign: "="
-            value: nation
+    options:
+      type: radio
+      heading: null
+      choices:
+        - UK total
+        - By nation
+    
+    UK total:
+      download:
+        - hospitalCases
 
-        fields:
-          - label: ""
-            value: hospitalCases
-            tooltip: Number of COVID-19 patients currently in hospital
-            type: bar
-            rollingAverage: false
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: stack
+          colours: [3] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
 
-      - heading: Data
-        tabType: table
-        params:
-          - key: areaType
-            sign: "="
-            value: nation
+          fields:
+            - label: ""
+              value: hospitalCases
+              tooltip: Number of COVID-19 patients currently in hospital
+              type: bar
+              rollingAverage: false
 
-        fields:
-          - label: Date reported
-            value: date
-            type: date
-            tooltip: Date reported by healthcare providers
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
 
-          - label: daily
-            value: hospitalCases
-            type: numeric
-            tooltip: Number of COVID-19 patients currently in hospital
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported by healthcare providers
 
-      # {{ StartDevOnlyBlock }}
-      # TODO: GA to write and reference md file.  PF to check - do we define separate About tab for each toggle on card?
-      - heading: About 
-        tabType: metadata
-        filename: hospitalCases.md
-      # {{ EndDevOnlyBlock }}
+            - label: daily
+              value: hospitalCases
+              type: numeric
+              tooltip: Number of COVID-19 patients currently in hospital
+
+        # {{ StartDevOnlyBlock }}
+        # TODO: GA to write and reference md file.  PF to check - do we define separate About tab for each toggle on card?
+        - heading: About 
+          tabType: metadata
+          filename: hospitalCases.md
+        # {{ EndDevOnlyBlock }}
+
+    By nation:
+      download:
+        - hospitalCases
+
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: stack
+          colours: [0, 9, 3, 10] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+
+          fields:
+            - label: ""
+              value: hospitalCases
+              tooltip: Number of COVID-19 patients currently in hospital
+              type: bar
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported by healthcare providers
+
+            - label: daily
+              value: hospitalCases
+              type: numeric
+              tooltip: Number of COVID-19 patients currently in hospital
+
+        # {{ StartDevOnlyBlock }}
+        # TODO: GA to write and reference md file.  PF to check - do we define separate About tab for each toggle on card?
+        - heading: About 
+          tabType: metadata
+          filename: hospitalCases.md
+        # {{ EndDevOnlyBlock }}
 
 # Only shown for England
 
@@ -717,48 +770,100 @@ cards:
       Data are not updated at weekends and data are not all provided from each nation every day. 
       National data are not directly comparable.
     # {{ EndDevOnlyBlock }}
+
     
-    download:
-      - covidOccupiedMVBeds
-    tabs:
-      - heading: Daily
-        tabType: chart
-        barType: stack
-        colours: [0, 9, 3, 10] # areaNames in alphabetical order
-        params:
-          - key: areaType
-            sign: "="
-            value: nation
-        fields:
-          - label: ""
-            value: covidOccupiedMVBeds
-            tooltip: Number of COVID-19 patients currently in mechanical ventilation beds
-            type: bar
-            rollingAverage: false
+    options:
+      type: radio
+      heading: null
+      choices:
+        - UK total
+        - By nation
+    
+    UK total:    
+      download:
+        - covidOccupiedMVBeds
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: stack
+          colours: [3] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+          fields:
+            - label: ""
+              value: covidOccupiedMVBeds
+              tooltip: Number of COVID-19 patients currently in mechanical ventilation beds
+              type: bar
+              rollingAverage: false
 
-      - heading: Data
-        tabType: table
-        params:
-          - key: areaType
-            sign: "="
-            value: nation
-        fields:
-          - label: Date reported
-            value: date
-            type: date
-            tooltip: Date reported by healthcare providers
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported by healthcare providers
 
-          - label: daily
-            value: covidOccupiedMVBeds
-            type: numeric
-            tooltip: Number of COVID-19 patients currently in mechanical ventilation beds
+            - label: daily
+              value: covidOccupiedMVBeds
+              type: numeric
+              tooltip: Number of COVID-19 patients currently in mechanical ventilation beds
 
-      # {{ StartDevOnlyBlock }}
-      # TODO: GA to write and reference md file
-      - heading: About 
-        tabType: metadata
-        filename: covidOccupiedMVBeds.md
-      # {{ EndDevOnlyBlock }}
+        # {{ StartDevOnlyBlock }}
+        # TODO: GA to write and reference md file
+        - heading: About 
+          tabType: metadata
+          filename: covidOccupiedMVBeds.md
+        # {{ EndDevOnlyBlock }}
+
+    By nation:    
+      download:
+        - covidOccupiedMVBeds
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: stack
+          colours: [0, 9, 3, 10] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+          fields:
+            - label: ""
+              value: covidOccupiedMVBeds
+              tooltip: Number of COVID-19 patients currently in mechanical ventilation beds
+              type: bar
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported by healthcare providers
+
+            - label: daily
+              value: covidOccupiedMVBeds
+              type: numeric
+              tooltip: Number of COVID-19 patients currently in mechanical ventilation beds
+
+        # {{ StartDevOnlyBlock }}
+        # TODO: GA to write and reference md file
+        - heading: About 
+          tabType: metadata
+          filename: covidOccupiedMVBeds.md
+        # {{ EndDevOnlyBlock }}
 
 # {{ StartDevOnlyBlock }}
 # Not currently publishing patients discharged: needs discussion with NHS to agree definitions.
